[package]
name = "yaksay"
version = "1.0.0"
authors = ["DiscoBiscuit99 <creme3sandwich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
colored = "1.9.3"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.1"
predicates = "1.0.4"
