[package]
name = "yaksay"
version = "1.4.2"
authors = ["Valdemar Høgsvig Lorenzen <valdemar.lorenzen@gmail.com>"]
edition = "2018"
description = "Enhanced edition of cowsay"
readme = "README.md"
repository = "https://github.com/discobiscuit99/yaksay"
license-file = "LICENSE"
keywords = ["cli", "yaksay", "cowsay"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
colored = "1.9.3"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.1"
predicates = "1.0.4"
terminal_size = "0.1.12"
hyphenation = { version = "0.8.0", features = ["embed_en-us"] }
textwrap = { version = "0.11.0", features = ["hyphenation"] }
